Add some details

--- a/_includes/connect.html
+++ b/_includes/connect.html
@@ -15,10 +15,10 @@
 
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="social discourse">
-          <h4>Discourse</h4>
+        <div class="social matrix">
+          <h4>Matrix</h4>
           <p>
-            Join <a href="https://discourse.bokeh.org/">community discussions</a>
+            Join <a href="https://riot.im/app/#/room/#einsteinpy:matrix.org">community discussions</a>
           </p>
         </div>
       </div>
@@ -27,7 +27,7 @@
         <div class="social twitter">
           <h4>Twitter</h4>
           <p>
-            Tweet things to <a href="//twitter.com/BokehPlots">@BokehPlots</a>
+            Tweet things to <a href="//twitter.com/EinsteinPy">@EinsteinPy</a>
           </p>
         </div>
       </div>
@@ -36,7 +36,7 @@
         <div class="social github">
           <h4>Github</h4>
           <p>
-            See <a href="https://github.com/bokeh/bokeh">source code</a> and  <a href="https://github.com/bokeh/bokeh/issues">issues</a>
+            See <a href="https://github.com/einsteinpy/einsteinpy">source code</a> and  <a href="https://github.com/einsteinpy/einsteinpy/issues">issues</a>
           </p>
         </div>
       </div>
