--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,17 +3,16 @@
     <div class="row">
       <div class="col-md-10 py-2">
         <p>
-            Bokeh is a fiscally sponsored project of <a href="//numfocus.org">NumFOCUS</a>, a nonprofit dedicated to supporting the open-source scientific computing community.
-            Donations help pay for cloud hosting costs, travel, and other project needs.
+            We are in a dire need of sponsorships to help sustain the project activities. Please consider donating some funds if you feel EinsteinPy is creating some change :)
         </p>
         <p>
-          ©{{ site.time | date: '%Y' }} Bokeh contributors.
-          The website content uses the <a href="https://github.com/bokeh/bokeh.org/blob/master/LICENSE.txt">BSD License</a>.
+          ©{{ site.time | date: '%Y' }} The EinsteinPy Project.
+          The website content uses the <a href="https://github.com/einsteinpy/einsteinpy.org/blob/master/COPYING">MIT Licence</a>.
         </p>
       </div>
       <br />
       <div class="col-md-2 py-2">
-        <a class="btn btn-primary" href="//numfocus.salsalabs.org/donate-to-bokeh/index.html">Donate</a>
+        <a class="btn btn-primary" href="//www.paypal.me/shreyasbapat">Donate</a>
       </div>
     </div>
   </div>
