--- a/_includes/team.html
+++ b/_includes/team.html
@@ -7,22 +7,21 @@
   </p>
 
   <ul>
-    <li><a href="//github.com/orgs/bokeh/people/birdsarah">Sarah Bird</a></li>
-    <li><a href="//github.com/orgs/bokeh/people/canavandl">Luke Canavan</a></li>
-    <li><a href="//github.com/orgs/bokeh/people/mattpap">Mateusz Paprocki</a></li>
-    <li><a href="//github.com/philippjfr">Philipp Rudiger</a></li>
-    <li><a href="//github.com/orgs/bokeh/people/bryevdv">Bryan Van de Ven</a></li>
+    <li><a href="//github.com/shreyasbapat">Shreyas Bapat</a></li>
+    <li><a href="//github.com/ritzvik">Ritwik Saha</a></li>
+    <li><a href="//github.com/orgs/einsteinpy/people/spino17">Bhavya Bhatt</a></li>
+    <li><a href="//github.com/masquerade0097">Priyanshu Khandelwal</a></li>
   </ul>
 
   <p>
-    The full list of contributors is on our <a href="//github.com/bokeh/bokeh/graphs/contributors">GitHub Contributors Page</a>.
+    The full list of contributors is on our <a href="//github.com/einsteinpy/einsteinpy/graphs/contributors">GitHub Contributors Page</a>.
   </p>
 
-  <p>
+  <!-- <p>
       Bokeh was initially developed with funding from the <a href="//www.darpa.mil/program/xdata">DARPA XDATA Program</a>, and subsequently with support from <a href="//anaconda.com/">Anaconda, Inc</a>.
       Bokeh is now a fiscally sponsored project of <a href="//numfocus.org/">NumFOCUS</a>, a nonprofit dedicated to supporting the open source scientific computing community.
       If you like Bokeh and want to support our mission, please consider <a href="//numfocus.salsalabs.org/donate-to-bokeh/index.html">making a donation</a> to support our efforts.
-  </p>
+  </p> -->
 
 </div>
 
