--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,19 +3,19 @@
   <div class="hero" id="hero">
     <div class="container">
       <h1 class="display-5 hero-heading">
-        The Bokeh Visualization Library
+        The EinsteinPy Project
       </h1>
       </br/>
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4"></div>
         <div class="col-lg-4 col-md-6 col-sm-4">
-          <a class="btn btn-success btn-lg btn-block" href="https://bokeh.pydata.org/en/latest" role="button">Documentation</a>
+          <a class="btn btn-success btn-lg btn-block" href="https://docs.einsteinpy.org" role="button">Documentation</a>
         </br/>
         </div>
         <div class="col-4 col-md-4 col-sm-4"></div>
       </div>
       <div clsss="row">
-        <a class="github-button" href="https://github.com/bokeh/bokeh" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star bokeh/bokeh on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/einsteinpy/einsteinpy" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star einsteinpy/einsteinpy on GitHub">Star</a>
       </div>
     </div>
   </div>
