--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -14,7 +14,7 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item flex-md-fill text-md-center">
-          <a class="nav-link" href="//bokeh.pydata.org/en/latest">Documentation</a>
+          <a class="nav-link" href="//docs.einsteinpy.org/en/latest">Documentation</a>
         </li>
 
         <li class="nav-item flex-md-fill text-md-center">
@@ -30,11 +30,11 @@
         </li>
 
         <li class="nav-item flex-md-fill text-md-center">
-          <a class="nav-link" href="//blog.bokeh.org">Blog</a>
+          <a class="nav-link" href="//blog.einsteinpy.org">Blog</a>
         </li>
 
         <li class="nav-item flex-md-fill text-md-center">
-            <a class="nav-link" href="//github.com/bokeh/bokeh">GitHub</a>
+            <a class="nav-link" href="//github.com/einsteinpy/einsteinpy">GitHub</a>
         </li>
 
         <li class="nav-item flex-md-fill text-md-center donate">
