Fix minor things

--- a/_includes/connect.html
+++ b/_includes/connect.html
@@ -15,7 +15,7 @@
 
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="social matrix">
+        <div class="social discourse">
           <h4>Matrix</h4>
           <p>
             Join <a href="https://riot.im/app/#/room/#einsteinpy:matrix.org">community discussions</a>
