--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main-menu">
 
     <a class="navbar-brand" href="/" id="logo">
-      <img src="/img/wordmark.png" height="30" width="110" />
+      <img src="/img/wordmark.png" height="50" width="132" />
     </a>
 
     <button class="navbar-toggler ml-auto hidden-sm-up float-xs-left" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,16 +18,16 @@
         </li>
 
         <li class="nav-item flex-md-fill text-md-center">
-          <a class="nav-link" href="//discourse.bokeh.org">Community</a>
+          <a class="nav-link" href="//riot.im/app/#/room/#einsteinpy:matrix.org">Community</a>
         </li>
 
         <li class="nav-item flex-md-fill text-md-center">
-          <a class="nav-link" href="//mybinder.org/v2/gh/bokeh/bokeh-notebooks/master?filepath=tutorial%2F00%20-%20Introduction%20and%20Setup.ipynb">Tutorials</a>
+          <a class="nav-link" href="//gke.mybinder.org/v2/gh/einsteinpy/einsteinpy/master?filepath=index.ipynb">Tutorials</a>
         </li>
 
-        <li class="nav-item flex-md-fill text-md-center">
+        <!-- <li class="nav-item flex-md-fill text-md-center">
           <a class="nav-link" href="//demo.bokeh.org">Demos</a>
-        </li>
+        </li> -->
 
         <li class="nav-item flex-md-fill text-md-center">
           <a class="nav-link" href="//blog.einsteinpy.org">Blog</a>
@@ -38,7 +38,7 @@
         </li>
 
         <li class="nav-item flex-md-fill text-md-center donate">
-          <a class="btn btn-primary" href="//numfocus.salsalabs.org/donate-to-bokeh/index.html">Donate</a>
+          <a class="btn btn-primary" href="//www.paypal.me/shreyasbapat">Donate</a>
         </li>
 
       </ul>
