--- a/_includes/glance.html
+++ b/_includes/glance.html
@@ -5,7 +5,7 @@
   <div class="row section-heading">
     <div class="col-lg-4 col-md-3"><hr/></div>
     <div class="col-lg-4 col-md-6">
-      <h2>Bokeh at a Glance</h2>
+      <h2>Key Features of The EinsteinPy Project</h2>
     </div>
     <div class="col-lg-4 col-md-3"><hr/></div>
   </div>
@@ -24,10 +24,3 @@
 
 </div>
 <!-- end bokeh at a glance -->
-
-
-
-
-
-
-
