--- a/css/main.sass
+++ b/css/main.sass
@@ -24,7 +24,7 @@
 
 .hero
   text-align: center
-  background-image: url('../img/hero.jpg')
+  background-image: url('../img/hero.png')
   background-repeat: repeat-x
   background-size: cover
   background-position: center
