--- a/_includes/links.html
+++ b/_includes/links.html
@@ -19,10 +19,10 @@
         <h6>Documentation</h6>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link" href="https://bokeh.pydata.org/en/latest/docs/user_guide.html">User Guide</a>
+            <a class="nav-link" href="https://docs.einsteinpy.org/en/latest/user_guide.html">User Guide</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://bokeh.pydata.org/en/latest/docs/gallery.html">Gallery</a>
+            <a class="nav-link" href="https://docs.einsteinpy.org/en/latest/jupyter.html">Gallery</a>
           </li>
         </ul>
       </div>
@@ -30,10 +30,10 @@
         <h6>Hands On</h6>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link" href="https://mybinder.org/v2/gh/bokeh/bokeh-notebooks/master?filepath=tutorial%2F00%20-%20Introduction%20and%20Setup.ipynb">Tutorials</a>
+            <a class="nav-link" href="https://gke.mybinder.org/v2/gh/einsteinpy/einsteinpy/master?filepath=index.ipynb">Tutorials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://demo.bokeh.org">Demos</a>
+            <a class="nav-link" href="https://docs.einsteinpy.org/en/latest/jupyter.html">Demos</a>
           </li>
         </ul>
       </div>
@@ -41,10 +41,10 @@
         <h6>Contribute</h6>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/bokeh/bokeh">GitHub</a>
+            <a class="nav-link" href="https://github.com/einsteinpy/einsteinpy">GitHub</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://bokeh.pydata.org/en/latest/docs/dev_guide.html">Developer Guide</a>
+            <a class="nav-link" href="https://docs.einsteinpy.org/en/latest/dev_guide.html">Developer Guide</a>
           </li>
         </ul>
       </div>
