--- a/_includes/vision.html
+++ b/_includes/vision.html
@@ -13,9 +13,8 @@
   <div class="row">
     <div class="col-lg-12 col-md-12">
       <p>
-        Bokeh is a Python interactive visualization library that targets modern web browsers for presentation.
-        Its goal is to provide elegant, concise construction of basic exploratory and advanced custom graphics in the style of D3, but also deliver this capability with high-performance interactivity over very large or streaming datasets.
-        Bokeh should help anyone who would like to quickly and easily create interactive plots, dashboards, and data applications.
+         EinsteinPy is a python package for problems arising in General Relativity! It strives to be accurate with
+         it's results and calculations. It strives to be the most complete package for the usecase.
       </p>
     </div>
   </div>
@@ -23,7 +22,7 @@
   <br />
   <br />
 
-  <div class="row section-heading">
+  <!-- <div class="row section-heading">
     <div class="col-lg-4 col-md-3"><hr/></div>
     <div class="col-lg-4 col-md-6">
       <h2>Areas of Work</h2>
@@ -38,10 +37,10 @@
           These are tasks and projects that we would like to do ourselves, when time and resources permit, or that we would be happy to have done by new contributors.
         </p>
       </div>
-    </div>
+    </div> -->
 
 
-  <br />
+  <!-- <br />
 
   <div class="row">
   {% assign items = site.goals %}
@@ -51,7 +50,7 @@
       <p> {{ item.content | markdownify }}</p>
     </div>
   {% endfor %}
-  </div>
+  </div> -->
 
 </div>
 <!-- end vision -->
